--- a/index.html
+++ b/index.html
@@ -3,95 +3,120 @@
 <head>
     <meta charset="UTF-8">
     <title>Carles Pérez Revert</title>
+
+    <link href="styles.css" type="text/css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-
-    <style>
-        .my-img {
-            float: left;
-            height: 64px;
-            margin-right: 20px;
-        }
-
-        .footer {
-            background-color: #212529;
-            bottom: 0;
-            color: white;
-            padding: 24px;
-            position: fixed;
-            text-align: center;
-            width: 100%;
-        }
-
-        #social-media-container {
-            display: inline-block;
-        }
-
-        .social-media {
-            cursor: pointer;
-            margin-left: 12px;
-            margin-right: 12px;
-            text-decoration: none;
-        }
-
-        svg {
-            fill: white;
-            height: 48px;
-            width: 48px;
-        }
-    </style>
 </head>
 <body>
-
-<div class="collapse" id="navbarToggleExternalContent">
-    <div class="bg-dark p-4">
-        <img src="assets/photo.jpeg" class="my-img rounded-circle" alt="display-none">
-        <h5 class="text-white h4 h5-img">Carles Pérez Revert</h5>
-        <span class="text-muted">Desarrollador de software en Display None</span>
-    </div>
-</div>
-<nav class="navbar navbar-dark bg-dark">
-    <div class="container-fluid">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <h5 class="text-white">Carles Pérez Revert</h5>
-        <a href="https://displaynone.es/" target="_blank">
-            <img src="https://displaynone.es/img/headers/header-display-none-godzilla-cabecera.gif" alt="display-none" height="64">
-        </a>
-    </div>
-</nav>
-<!--    <nav class="navbar navbar-light bg-light">-->
-<!--        <div class="container-fluid">-->
-<!--            <a class="navbar-brand" href="#">-->
-<!--                <img src="assets/photo.jpeg" alt="carles" height="64" class="d-inline-block align-top rounded-circle">-->
-<!--                    Bootstrap-->
-<!--            </a>-->
-<!--        </div>-->
-<!--    </nav>-->
-<!--    <div class="header">-->
-<!--        <a href="#">-->
-<!--            <img class="rounded-circle" src="https://displaynone.es/img/headers/header-display-none-godzilla-cabecera.gif" height="96" alt="carles">-->
-<!--&lt;!&ndash;            <img class="rounded-circle" src="assets/photo.jpeg" height="48" alt="carles">&ndash;&gt;-->
-<!--        </a>-->
-<!--    </div>-->
-
-    <div class="footer">
-        <div id="social-media-container">
-            <a href="https://github.com/perezrevert04" target="_blank" id="github" class="social-media">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/></svg>
-            </a>
-            <a href="https://instagram.com/carlesperez.dev" target="_blank" id="instagram" class="social-media">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M14.829 6.302c-.738-.034-.96-.04-2.829-.04s-2.09.007-2.828.04c-1.899.087-2.783.986-2.87 2.87-.033.738-.041.959-.041 2.828s.008 2.09.041 2.829c.087 1.879.967 2.783 2.87 2.87.737.033.959.041 2.828.041 1.87 0 2.091-.007 2.829-.041 1.899-.086 2.782-.988 2.87-2.87.033-.738.04-.96.04-2.829s-.007-2.09-.04-2.828c-.088-1.883-.973-2.783-2.87-2.87zm-2.829 9.293c-1.985 0-3.595-1.609-3.595-3.595 0-1.985 1.61-3.594 3.595-3.594s3.595 1.609 3.595 3.594c0 1.985-1.61 3.595-3.595 3.595zm3.737-6.491c-.464 0-.84-.376-.84-.84 0-.464.376-.84.84-.84.464 0 .84.376.84.84 0 .463-.376.84-.84.84zm-1.404 2.896c0 1.289-1.045 2.333-2.333 2.333s-2.333-1.044-2.333-2.333c0-1.289 1.045-2.333 2.333-2.333s2.333 1.044 2.333 2.333zm-2.333-12c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm6.958 14.886c-.115 2.545-1.532 3.955-4.071 4.072-.747.034-.986.042-2.887.042s-2.139-.008-2.886-.042c-2.544-.117-3.955-1.529-4.072-4.072-.034-.746-.042-.985-.042-2.886 0-1.901.008-2.139.042-2.886.117-2.544 1.529-3.955 4.072-4.071.747-.035.985-.043 2.886-.043s2.14.008 2.887.043c2.545.117 3.957 1.532 4.071 4.071.034.747.042.985.042 2.886 0 1.901-.008 2.14-.042 2.886z"/></svg>
-            </a>
-            <a href="https://www.linkedin.com/in/perezrevert04/" target="_blank" id="linkedin" class="social-media">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12 0c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm-2 16h-2v-6h2v6zm-1-6.891c-.607 0-1.1-.496-1.1-1.109 0-.612.492-1.109 1.1-1.109s1.1.497 1.1 1.109c0 .613-.493 1.109-1.1 1.109zm8 6.891h-1.998v-2.861c0-1.881-2.002-1.722-2.002 0v2.861h-2v-6h2v1.093c.872-1.616 4-1.736 4 1.548v3.359z"/></svg>
-            </a>
-            <a href="https://twitter.com/carlesperez_dev" target="_blank" id="twitter" class="social-media">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12 0c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm6.066 9.645c.183 4.04-2.83 8.544-8.164 8.544-1.622 0-3.131-.476-4.402-1.291 1.524.18 3.045-.244 4.252-1.189-1.256-.023-2.317-.854-2.684-1.995.451.086.895.061 1.298-.049-1.381-.278-2.335-1.522-2.304-2.853.388.215.83.344 1.301.359-1.279-.855-1.641-2.544-.889-3.835 1.416 1.738 3.533 2.881 5.92 3.001-.419-1.796.944-3.527 2.799-3.527.825 0 1.572.349 2.096.907.654-.128 1.27-.368 1.824-.697-.215.671-.67 1.233-1.263 1.589.581-.07 1.135-.224 1.649-.453-.384.578-.87 1.084-1.433 1.489z"/></svg>
-            </a>
+    <header>
+        <div class="my-profile d-flex">
+            <img class="my-image" src="assets/imgs/photo.jpeg" alt="perezrevert04">
+            <div class="my-data">
+                <h4>Carles Pérez Revert</h4>
+                <span>Software Developer at Display None Studio. 🦖</span>
+            </div>
         </div>
-    </div>
+
+        <img class="gif-display-none" src="assets/imgs/header-display-none-godzilla-cabecera.gif" alt="Display None Studio">
+    </header>
+
+    <main>
+        <div class="container">
+            <div class="main-timeline">
+
+                <!-- start experience section-->
+                <div class="timeline">
+                    <div class="icon"></div>
+                    <div class="date-content">
+                        <div class="date-outer">
+                            <span class="date">
+                                <span class="month">Diciembre</span>
+                                <span class="year">2020</span>
+                            </span>
+                        </div>
+                    </div>
+                    <div class="timeline-content">
+                        <h5 class="title">Display None Studio</h5>
+                        <p class="description">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed efficitur ex sit amet massa
+                            scelerisque scelerisque. Aliquam erat volutpat. Aenean interdum finibus efficitur. Praesent
+                            dapibus dolor felis, eu ultrices elit molestie.
+                        </p>
+                    </div>
+                </div>
+                <!-- end experience section-->
+
+                <!-- start experience section-->
+                <div class="timeline">
+                    <div class="icon"></div>
+                    <div class="date-content">
+                        <div class="date-outer">
+                            <span class="date">
+                                <span class="month">Febrero</span>
+                                <span class="year">2019</span>
+                            </span>
+                        </div>
+                    </div>
+                    <div class="timeline-content">
+                        <h5 class="title">Epigram Technologies</h5>
+                        <p class="description">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed efficitur ex sit amet massa
+                            scelerisque scelerisque. Aliquam erat volutpat. Aenean interdum finibus efficitur. Praesent
+                            dapibus dolor felis, eu ultrices elit molestie.
+                        </p>
+                    </div>
+                </div>
+                <!-- end experience section-->
+
+                <!-- start experience section-->
+                <div class="timeline">
+                    <div class="icon"></div>
+                    <div class="date-content">
+                        <div class="date-outer">
+                            <span class="date">
+                                <span class="month">Mayo</span>
+                                <span class="year">2018</span>
+                            </span>
+                        </div>
+                    </div>
+                    <div class="timeline-content">
+                        <h5 class="title">Stadler Rail</h5>
+                        <p class="description">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed efficitur ex sit amet massa
+                            scelerisque scelerisque. Aliquam erat volutpat. Aenean interdum finibus efficitur. Praesent
+                            dapibus dolor felis, eu ultrices elit molestie.
+                        </p>
+                    </div>
+                </div>
+                <!-- end experience section-->
+
+                <!-- start experience section-->
+                <div class="timeline">
+                    <div class="icon"></div>
+                    <div class="date-content">
+                        <div class="date-outer">
+                            <span class="date">
+                                <span class="month">Julio</span>
+                                <span class="year">2015</span>
+                            </span>
+                        </div>
+                    </div>
+                    <div class="timeline-content">
+                        <h5 class="title">Ajuntament de Moixent</h5>
+                        <p class="description">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed efficitur ex sit amet massa
+                            scelerisque scelerisque. Aliquam erat volutpat. Aenean interdum finibus efficitur. Praesent
+                            dapibus dolor felis, eu ultrices elit molestie.
+                        </p>
+                    </div>
+                </div>
+                <!-- end experience section-->
+
+            </div>
+        </div>
+    </main>
+
+<!--    <footer></footer>-->
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
