Finalizada experiencia laboral

--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
 
     <link href="styles.css" type="text/css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-
-    <script src="assets/js/header.js" rel="script"></script>
 </head>
 <body>
     <header id="my-header" class="d-flex">
@@ -68,6 +66,34 @@
                             <h5 class="title">Epigram Technologies</h5>
                             <h6>Junior Software Developer</h6>
                             <i>Febrero 2019 - Marzo 2020</i>
+                            <p class="description">
+                                Formado como desarrollador frontend de Angular.
+                            </p>
+                            <p class="description">
+                                Desarrollo de un panel para administración da datos y algunas pantallas para móvil.
+                            </p>
+                            <p class="description">
+                                Trabajo con metodología SCRUM.
+                            </p>
+                        </div>
+                    </div>
+                    <!-- end experience section-->
+
+                    <!-- start experience section-->
+                    <div id="eb-moixent" class="timeline">
+                        <div class="icon"></div>
+                        <div class="date-content">
+                            <div class="date-outer">
+                            <span class="date">
+                                <span class="month">Septiembre</span>
+                                <span class="year">2018</span>
+                            </span>
+                            </div>
+                        </div>
+                        <div class="timeline-content">
+                            <h5 class="title">Esport Base Moixent</h5>
+                            <h6>Entrenador y miembro de la directiva</h6>
+                            <i>Septiembre 2018 - Febrero 2021</i>
                             <p class="description">
                                 Formado como desarrollador frontend de Angular.
                             </p>
