--- a/index.html
+++ b/index.html
@@ -95,13 +95,10 @@
                             <h6>Entrenador y miembro de la directiva</h6>
                             <i>Septiembre 2018 - Febrero 2021</i>
                             <p class="description">
-                                Formado como desarrollador frontend de Angular.
+                                Formador de la escuela de fútbol municipal y miembro de la directiva.
                             </p>
                             <p class="description">
-                                Desarrollo de un panel para administración da datos y algunas pantallas para móvil.
-                            </p>
-                            <p class="description">
-                                Trabajo con metodología SCRUM.
+                                Entrenador del equipo Infantil, Cadete y Benjamín en distintas temporadas.
                             </p>
                         </div>
                     </div>
@@ -159,6 +156,95 @@
                 </div>
             </div>
         </section>
+
+        <section class="pt-5" id="formacion-academica">
+            <div class="container">
+                <h3 class="text-center">Formación académica</h3>
+                <hr class="title-underline">
+
+                <div class="main-timeline">
+
+                    <!-- start experience section-->
+                    <div id="android-introducion-programacion" class="timeline">
+                        <div class="icon"></div>
+                        <div class="date-content">
+                            <div class="date-outer">
+                            <span class="date">
+                                <span class="month">Mayo</span>
+                                <span class="year">2020</span>
+                            </span>
+                            </div>
+                        </div>
+                        <div class="timeline-content">
+                            <h5 class="title">AIP201x: Android: Introducción a la Programación</h5>
+                            <h6>ID de la credencial 707fdebbfb7c4a128d110d137138833b</h6>
+                            <i>Mayo 2020</i>
+                            <p class="description">
+                                Curso de introducción a la programación en la plataforma Android.
+                            </p>
+                            <p class="description">
+                                Repaso de Java e introducción a Kotlin. Interfaces de usuario en Android.
+                                Actividades, intenciones, seguridad, posicionamiento, mapas y bases de datos.
+                                Nociones de arquitectura CLEAN.
+                            </p>
+                        </div>
+                    </div>
+                    <!-- end experience section-->
+
+                    <!-- start experience section-->
+                    <div id="desarrollo-aplicaciones-web-php-mysql" class="timeline">
+                        <div class="icon"></div>
+                        <div class="date-content">
+                            <div class="date-outer">
+                            <span class="date">
+                                <span class="month">Julio</span>
+                                <span class="year">2017</span>
+                            </span>
+                            </div>
+                        </div>
+                        <div class="timeline-content">
+                            <h5 class="title">Desarrollo de aplicaciones webs con PHP y mysql</h5>
+                            <h6>ID de la credencial 17/36902</h6>
+                            <i>Junio 2017 - Julio 2017</i>
+                            <p class="description">
+                                Formado como desarrollador frontend de Angular.
+                            </p>
+                            <p class="description">
+                                Desarrollo de un panel para administración da datos y algunas pantallas para móvil.
+                            </p>
+                            <p class="description">
+                                Trabajo con metodología SCRUM.
+                            </p>
+                        </div>
+                    </div>
+                    <!-- end experience section-->
+
+                    <!-- start experience section-->
+                    <div id="ingenieria-informatica-upv" class="timeline">
+                        <div class="icon"></div>
+                        <div class="date-content">
+                            <div class="date-outer">
+                            <span class="date">
+                                <span class="month">Septiembre</span>
+                                <span class="year">2014</span>
+                            </span>
+                            </div>
+                        </div>
+                        <div class="timeline-content">
+                            <h5 class="title">Grado en Ingeniería Informática</h5>
+                            <h6>Mención en Ingeniería del Software</h6>
+                            <i>Septiembre 2014 - Septiembre 2020</i>
+                            <p class="description">
+                                Mención especial en Trabajo de fin de Grado (TFG): 10 M.H.
+                            </p>
+                        </div>
+                    </div>
+                    <!-- end experience section-->
+
+                </div>
+            </div>
+        </section>
+
     </main>
 
     <footer class="d-flex" style="justify-content: space-evenly">
