Improved PHP course description

--- a/index.html
+++ b/index.html
@@ -205,15 +205,18 @@
                         <div class="timeline-content">
                             <h5 class="title">Desarrollo de aplicaciones webs con PHP y mysql</h5>
                             <h6>ID de la credencial 17/36902</h6>
-                            <i>Junio 2017 - Julio 2017</i>
+                            <i>Julio 2017</i>
                             <p class="description">
-                                Formado como desarrollador frontend de Angular.
+                                Curso de 30 horas presenciales equivalente a 3 créditos.
                             </p>
                             <p class="description">
-                                Desarrollo de un panel para administración da datos y algunas pantallas para móvil.
+                                Introducción a herramientas necesarias para realizar aplicaciones web con PHP.
                             </p>
                             <p class="description">
-                                Trabajo con metodología SCRUM.
+                                Implementación de aplicaciones web basadas en bases de datos.
+                            </p>
+                            <p class="description">
+                                Implementación de un ejemplo de aplicación real.
                             </p>
                         </div>
                     </div>
