Added contact and styles improves

--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
         <div class="my-profile d-flex w100 justify-content-center">
             <img class="my-image" src="assets/imgs/photo.jpeg" alt="perezrevert04">
             <div id="my-data">
-                <h4 class="vw100">Carles Pérez Revert</h4>
-                <span class="vw100">Software Developer at Display None Studio. 🦖</span>
+                <h4>Carles Pérez Revert</h4>
+                <span>Software Developer at Display None Studio. 🦖</span>
+                <b class="contacto">Contacto: carles.perez.revert@gmail.com</b>
             </div>
         </div>
     </header>
@@ -155,6 +156,8 @@
 
                 </div>
             </div>
+        
+            <hr class="end">
         </section>
 
         <section class="pt-5" id="formacion-academica">
@@ -177,8 +180,8 @@
                         </div>
                         <div class="timeline-content">
                             <h5 class="title">AIP201x: Android: Introducción a la Programación</h5>
-                            <h6>ID de la credencial 707fdebbfb7c4a128d110d137138833b</h6>
-                            <i>Mayo 2020</i>
+                            <h6>Plataforma edX - Curso de la UPV</h6>
+                            <i>ID de la credencial 707fdebbfb7c4a128d110d137138833b - Mayo 2020</i>
                             <p class="description">
                                 Curso de introducción a la programación en la plataforma Android.
                             </p>
@@ -204,8 +207,8 @@
                         </div>
                         <div class="timeline-content">
                             <h5 class="title">Desarrollo de aplicaciones webs con PHP y mysql</h5>
-                            <h6>ID de la credencial 17/36902</h6>
-                            <i>Julio 2017</i>
+                            <h6>Centro de formación permanente de la UPV</h6>
+                            <i>ID de la credencial 17/36902 - Julio 2017</i>
                             <p class="description">
                                 Curso de 30 horas presenciales equivalente a 3 créditos.
                             </p>
@@ -258,6 +261,8 @@
 
                 </div>
             </div>
+
+            <hr class="end">
         </section>
 
     </main>
