--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                             </div>
                         </div>
                         <div class="timeline-content">
-                            <h5 class="title">Grado en Ingeniería Informática</h5>
+                            <h5 class="title">Grado en Ingeniería Informática en la UPV</h5>
                             <h6>Mención en Ingeniería del Software</h6>
                             <i>Septiembre 2014 - Septiembre 2020</i>
                             <p class="description">
